# spline-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
settings/: spline.yaml
spline_mcp/: __init__.py  __main__.py  cli.py  client.py  config.py  server.py
spline_mcp/assets/: __init__.py  manager.py  validator.py
spline_mcp/generators/: __init__.py  base.py  nextjs.py  react.py  vanilla.py
spline_mcp/integrations/: __init__.py  n8n.py  websocket.py
spline_mcp/tools/: __init__.py  assets.py  docs.py  events.py  generation.py  helpers.py  integration.py  materials.py  objects.py  runtime.py  scenes.py
tests/: __init__.py  test_assets.py  test_config.py  test_generators.py  test_integration.py  test_server.py  test_tools.py
