[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spline-mcp"
version = "0.1.1"
description = "MCP server for Spline.design 3D scene orchestration"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.13"
authors = [{ name = "Les Leslie", email = "les@wedgwood.us" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.12.3",
    "mcp-common>=0.4.8",
    "oneiric>=0.3.6",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
    "structlog>=25.0.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "crackerjack>=0.50.1",
    "session-buddy>=0.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.7.0",
]

[project.scripts]
spline-mcp = "spline_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/lesleslie/spline-mcp"
Repository = "https://github.com/lesleslie/spline-mcp.git"

[tool.hatch.build.targets.wheel]
packages = ["spline_mcp"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=spline_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = ["spline_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]
